--- a/index.html
+++ b/index.html
@@ -7,37 +7,30 @@
     <title>Puzzle</title>
 </head>
 <body>
-    <h1>Consigue sumar 15 en todas las direcciones!</h1>
     <a href="" class="reset"></a>
     <div class="main">
         <div class="container">
-            <div class="ro1 co1 di1 clickable numberitem">1</div>
-            <div class="ro1 co2 clickable numberitem">2</div>
-            <div class="ro1 co3 di2 clickable numberitem">3</div>
-            <div class="ro2 co1 clickable numberitem">4</div>
-            <div class="ro2 co2 di1 di2 clickable numberitem">5</div>
-            <div class="ro2 co3 clickable numberitem">6</div>
-            <div class="ro3 co1 di2 clickable numberitem">7</div>
-            <div class="ro3 co2 clickable numberitem">8</div>
-            <div class="ro3 co3 di1 clickable numberitem">9</div>
-        </div>
-        <div class="sumasrows">
-            <div class="sumaro1 numberitem resultado"></div>
-            <div class="sumaro2 numberitem resultado"></div>
-            <div class="sumaro3 numberitem resultado"></div>
-        </div>
-        <div class="sumasbottom">
-            <div class="sumadi2 numberitem resultado"></div>
-            <div class="sumaco1 numberitem resultado"></div>
-            <div class="sumaco2 numberitem resultado"></div>
-            <div class="sumaco3 numberitem resultado"></div>
-            <div class="sumadi1 numberitem resultado"></div>
+            <div class="ro1 co1 numberitem">1</div>
+            <div class="ro1 co2 numberitem">2</div>
+            <div class="ro1 co3 numberitem">3</div>
+            <div class="ro1 co4 numberitem">4</div>
+            <div class="ro2 co1 numberitem">5</div>
+            <div class="ro2 co2 numberitem">6</div>
+            <div class="ro2 co3 numberitem">7</div>
+            <div class="ro2 co4 numberitem">8</div>
+            <div class="ro3 co1 numberitem">9</div>
+            <div class="ro3 co2 numberitem">10</div>
+            <div class="ro3 co3 numberitem">11</div>
+            <div class="ro3 co4 numberitem">12</div>
+            <div class="ro4 co1 numberitem">13</div>
+            <div class="ro4 co2 numberitem">14</div>
+            <div class="ro4 co3 numberitem">15</div>
+            <div class="ro4 co4 whiteSpace numberitem"></div>
         </div>
     </div>
 </body>
 <script src="script.js"></script>
 <script>
     
-
 </script>
 </html>
